# tenko

./: .dockerignore  .env.example  .gitignore  Dockerfile  getrollcall.py  main.py  notify.py  pyproject.toml  sendNum.py  sendRadar.py
.github/workflows/: docker.yml
schools/: config.py  rollcall.py
schools/tku/: auth.py
